--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
   "dependencies": {
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "ethers": "^4.0.17",
     "geocoder": "^0.2.3",
     "haversine": "^1.1.0",
+    "js-sha512": "^0.8.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.3",
     "mongoose-sequence": "^4.0.1",
     "node-fetch": "^2.2.0",
+    "random-seed": "^0.3.0",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "sha2": "^1.0.2",
+    "sha512": "^0.0.1",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
